base_formatter: API is pretty much fixed

--- a/hotdoc/formatters/html_templates/base_page.html
+++ b/hotdoc/formatters/html_templates/base_page.html
@@ -8,7 +8,7 @@
 <title>@page.get_title()</title>
 
 @for script in scripts:
-<script src="@assets_path/js/@script"></script>
+<script src="@page.assets_path/js/@script"></script>
 @end
 </head>
 
