Fix a few formatting issues

--- a/hotdoc/formatters/html_templates/base_symbol.html
+++ b/hotdoc/formatters/html_templates/base_symbol.html
@@ -10,7 +10,7 @@ tags.pop('returns', None)
 
 <div class="base_symbol_container" data-hotdoc-tags="\
 @for tag in tags.values():
-@tag.name.lower():@tag.description;\
+@tag.name.lower():@tag.value;\
 @end
 " id="@symbol.link.id_">
 	<ul class="base_symbol_header">
