--- a/hotdoc/formatters/html_templates/base_symbol_summary.html
+++ b/hotdoc/formatters/html_templates/base_symbol_summary.html
@@ -10,7 +10,7 @@ tags.pop('returns', None)
 
 <tr class="base_symbol_summary" data-hotdoc-tags="\
 @for tag in tags.values():
-@tag.name.lower():@tag.description;\
+@tag.name.lower():@tag.value;\
 @end
 ">
 	<td>
