html_formatter: layout improvements
+ use local anchors

--- a/hotdoc/formatters/html_templates/callable.html
+++ b/hotdoc/formatters/html_templates/callable.html
@@ -3,7 +3,7 @@
 
 @def header():
 <h3>
-	<span>The <code>“@symbol.link.title”</code> @callable_type</span>
+	<span><code>@symbol.link.title</code></span>
 </h3>
 @end
 @def content():
