--- a/hotdoc/formatters/html_templates/page.html
+++ b/hotdoc/formatters/html_templates/page.html
@@ -12,6 +12,7 @@
 </div>
 @end
 
+<div id="symbols-description">
 @toc
 
 @for symbols_detail in symbols_details:
@@ -24,5 +25,5 @@
 @description
 @end
 @end
-\
+</div>
 @end
