--- a/hotdoc/formatters/html_templates/property.html
+++ b/hotdoc/formatters/html_templates/property.html
@@ -3,7 +3,7 @@
 
 @def header():
 <h3 class="method">
-	<span>The <code>“@property.link.title”</code> property</span>
+	<span><code>@property.link.title</code></span>
 </h3>
 @end
 @def content():
