html_formatter: remove top-of-page symbol summary
This is better handled at theme level, and greatly simplifies
the code in there.

--- a/hotdoc/formatters/html_templates/page.html
+++ b/hotdoc/formatters/html_templates/page.html
@@ -1,4 +1,4 @@
-@require(page, source_file, toc, symbols_details, extra_html, extra_footer_html)
+@require(page, source_file, symbols_details, extra_html, extra_footer_html)
 @extends('base_page.html')
 
 @def content():
@@ -11,8 +11,6 @@
 @end
 </div>
 @end
-
-@toc
 
 @for symbols_detail in symbols_details:
 @if symbols_detail.name:
