Port to python 3

--- a/hotdoc/formatters/html_templates/return_item.html
+++ b/hotdoc/formatters/html_templates/return_item.html
@@ -15,7 +15,7 @@
 	</td>
 	@if return_item.extension_contents:
 	\
-	@for name, ex in return_item.extension_contents.iteritems():
+	@for name, ex in return_item.extension_contents.items():
 	<td>
 	@ex
 	</td>
