license extension: Add CC0, allow different license for code samples

--- a/hotdoc/extensions/license/html_templates/license.html
+++ b/hotdoc/extensions/license/html_templates/license.html
@@ -1,13 +1,11 @@
-@require(license, logo_path)
-
-<hr/>
+@require(license, logo_path, content_designation)
 
 <div class="license-description">
 	<table>
 		<tbody>
 			<tr>
 			<td>
-				<em>Content in this page is licensed under a <a rel="license" href="@license.url">@license.full_name</a>
+				<em>@content_designation licensed under a <a rel="license" href="@license.url">@license.full_name</a>
 				license, unless otherwise noted.</em>
 			</td>
 			<td>
