W3C: added alt attribute to img tag

--- a/hotdoc/extensions/license/html_templates/license.html
+++ b/hotdoc/extensions/license/html_templates/license.html
@@ -11,7 +11,7 @@
 			<td>
 			@if logo_path:
 			<a rel="license" href="@license.url">
-				<img src="@logo_path" class="license-logo"></img>
+				<img src="@logo_path" class="license-logo" alt="@license.full_name"></img>
 			</a>
 			@end
 			</td>	
