Change default theme

--- a/hotdoc/extensions/gi/html_templates/javascript_prototype.html
+++ b/hotdoc/extensions/gi/html_templates/javascript_prototype.html
@@ -1,6 +1,6 @@
 @require(function_name, parameters, comment, throws, is_method)
-<pre class="javascript-prototype">
-function @function_name\
+<pre class="javascript-prototype language-javascript">
+<code>function @function_name\
 (\
 @if parameters:
 \
@@ -24,4 +24,4 @@ Array(\
 ): \
 {
     // @comment
-}</pre>
+}</code></pre>
