--- a/hotdoc/extensions/gi/html_templates/python_prototype.html
+++ b/hotdoc/extensions/gi/html_templates/python_prototype.html
@@ -1,6 +1,6 @@
 @require(function_name, parameters, comment, throws, is_method)
-<pre class="python-prototype">
-@if throws:
+<pre class="python-prototype language-python">
+<code>@if throws:
 @@raises(<a href="https://developer.gnome.org/glib/stable/glib-Error-Reporting.html">GLib.GError</a>)
 @end
 \
@@ -21,4 +21,4 @@ self\
 \
 @end
 ):
-    #@comment</pre>
+    #@comment</code></pre>
