--- a/hotdoc/extensions/gi/html_templates/javascript_prototype.html
+++ b/hotdoc/extensions/gi/html_templates/javascript_prototype.html
@@ -6,6 +6,7 @@
 \
 @for i, parameter in enumerate (parameters):
 \
+@if not parameter.get_extension_attribute('gi-extension', 'is_destroy'):
 @if i != 0:
 , \
 @end
@@ -19,6 +20,7 @@ Array(\
 )\
 @end
 \
+@end
 @end
 @end
 ): \
