gi_extension: Separate the languages translation from the rest of the processing
This allows to create more languages and to be more flexible.

--- a/hotdoc/extensions/gi/html_templates/symbol_language_wrapper.html
+++ b/hotdoc/extensions/gi/html_templates/symbol_language_wrapper.html
@@ -1,15 +1,9 @@
-@require(symbol, c_doc, python_doc, js_doc)
+@require(symbol, languages)
 
-<div class="gi-symbol gi-symbol-c">
-	@c_doc
-</div>
-@if python_doc:
-<div class="gi-symbol gi-symbol-python">
-	@python_doc
-</div>
+@for lang, lang_doc in languages.items():
+<div class="gi-symbol gi-symbol-@lang">
+@if lang_doc:
+@lang_doc
 @end
-@if js_doc:
-<div class="gi-symbol gi-symbol-javascript">
-	@js_doc
 </div>
 @end
