Implement a separate symbol type for action signals
Sparates then to a different section, and format their prototype
differently

--- a/hotdoc/extensions/gi/html_templates/gi_annotations.html
+++ b/hotdoc/extensions/gi/html_templates/gi_annotations.html
@@ -6,8 +6,7 @@
 <span class="acronym">@annotation.nick</span>\
 </abbr>\
 @if annotation.value:
- @annotation.value\
+@annotation.value\
 @end
-]\
-</span>
+]</span>\
 @end
