--- a/hotdoc/extensions/gi/html_templates/gi_annotations.html
+++ b/hotdoc/extensions/gi/html_templates/gi_annotations.html
@@ -6,7 +6,7 @@
 <span class="acronym">@annotation.nick</span>\
 </abbr>\
 @if annotation.value:
-@annotation.value\
+&nbsp;@annotation.value\
 @end
 ]</span>\
 @end
